Fix CSRF tokening on POST PanelActions

--- a/templates/katzen/component/_panel_view.html.twig
+++ b/templates/katzen/component/_panel_view.html.twig
@@ -108,12 +108,21 @@
 
             <div class="card-footer d-flex flex-wrap gap-2">
               {% for a in c.quickActions %}
-                <a class="btn btn-sm btn-{{ a.variant }}"
-                   href="{{ a.route ? path(a.route.name, a.route.params|default({})) : '#' }}"
-                   {% if a.confirmMessage %} data-confirm="{{ a.confirmMessage }}"{% endif %}>
-                  {% if a.icon %}<i class="bi {{ a.icon }} me-1"></i>{% endif %}
-                  {{ a.label }}
-                </a>
+              {% if a.method == 'POST' %}
+              <form method="post" action="{{ path(a.route.name, a.route.params|default({})) }}" class="d-inline">
+                <input type="hidden" name="_token" value="{{ csrf_token(a.route.name ~ '_' ~ c.id) }}">
+                <button type="submit" class="btn btn-{{ a.variant }}">
+                  {% if a.icon %}<i class="bi {{ a.icon }}"></i>{% endif %} {{ a.label }}
+                </button>
+              </form>
+              {% else %}              
+              <a class="btn btn-sm btn-{{ a.variant }}"
+                 href="{{ a.route ? path(a.route.name, a.route.params|default({})) : '#' }}"
+                 {% if a.confirmMessage %} data-confirm="{{ a.confirmMessage }}"{% endif %}>
+                {% if a.icon %}<i class="bi {{ a.icon }} me-1"></i>{% endif %}
+                {{ a.label }}
+              </a>
+              {% endif %}                
               {% endfor %}
             </div>
           </div>
