--- a/templates/client/bio.html.twig
+++ b/templates/client/bio.html.twig
@@ -2,6 +2,6 @@
 
 {% block content %}
 <div class="container">
-  Sasha Beal is ....
+  Sasha Beal is an artist and designer based in Pittsburgh, Pennsylvania.
 </div>
 {% endblock %}
