--- a/templates/client/bio.html.twig
+++ b/templates/client/bio.html.twig
@@ -2,6 +2,16 @@
 
 {% block content %}
 <div class="container">
-  Sasha Beal is an artist and designer based in Pittsburgh, Pennsylvania.
+  <p>
+    Sasha Beal is an artist and designer based in Pittsburgh, Pennsylvania.
+  </p>
+  <p>
+    A multimedia artist, Sasha creates dynamic works with paint, charcoal, and fabrics.   
+  </p>
+  <p>
+    Mykhailo Boychuk 
+    Kazymyr Malevych
+    Ivan Marchuk
+  </p>  
 </div>
 {% endblock %}
